added intro section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
           </div>
 
           <div class="dashboard__cards">
-
             <a class="dashboard-card">
               <div class="dashboard-card__inner">
                 <div class="dashboard-card__image-wrap">
@@ -109,13 +108,71 @@
                 </div>
               </div>
             </a>
-          
           </div>
 
         </div>
       </div>
 
+      <div class="intro">
+        <div class="intro__decor-wrap">
+          <img src="images/milky-way.png" alt="milky-way" class="intro__decor-img">
+        </div>
+
+        <div class="intro__decor-wrap">
+          <img src="images/milky-way.png" alt="milky-way" class="intro__decor-img">
+        </div>
+
+        <div class="intro__decor-wrap">
+          <img src="images/milky-way.png" alt="milky-way" class="intro__decor-img">
+        </div>
+
+        <p class="intro__text">Trade with world’s most trusted and fastest wallets</p>
+        <h2 class="intro__heading">Wallets We Support</h2>
+      </div>
    
+      <section class="wallets">
+        <div class="wallets__inner">
+
+          <div class="wallets__grid">
+            <div class="wallets__grid-item">
+              <a href="" class="wallets__link">
+                <img src="images/metamask.png" alt="wallets image" class="wallets__img">
+              </a>
+              <span class="wallets__text">Metamask</span>
+            </div>
+
+            <div class="wallets__grid-item">
+              <a href="" class="wallets__link">
+                <img src="images/binance.png" alt="wallets image" class="wallets__img">
+              </a>
+              <span class="images/wallets__text">Binance</span>
+            </div>
+
+            <div class="wallets__grid-item">
+              <a href="" class="wallets__link">
+                <img src="images/trust.png" alt="wallets image" class="wallets__img">
+              </a>
+              <span class="wallets__text">Trust wallet</span>
+            </div>
+
+            <div class="wallets__grid-item">
+              <a href="" class="wallets__link">
+                <img src="images/alpha.png" alt="wallets image" class="wallets__img">
+              </a>
+              <span class="wallets__text">Alpha</span>
+            </div>
+
+            <div class="wallets__grid-item">
+              <a href="" class="wallets__link">
+                <img src="images/gecko.png" alt="wallets image" class="wallets__img">
+              </a>
+              <span class="wallets__text">CoinGecko</span>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      
     </main>
 
     <footer class="footer"></footer>
